--- a/src/widget-status.html
+++ b/src/widget-status.html
@@ -43,17 +43,15 @@
 
         .widget-container {
             width: 300px;
-            height: 200px;
-            background: var(--bg-surface);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
+            height: auto;
+            background: var(--bg-primary);
+            backdrop-filter: blur(10px);
             border: 1px solid var(--border-color);
-            border-radius: 16px;
-            box-shadow: var(--card-shadow);
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             display: flex;
             flex-direction: column;
             position: relative;
-            overflow: hidden;
             -webkit-app-region: drag;
         }
 
@@ -73,6 +71,7 @@
             align-items: center;
             padding: 16px 20px 12px 20px;
             border-bottom: 1px solid var(--border-color);
+            flex-shrink: 0;
         }
 
         .widget-title {
@@ -89,6 +88,8 @@
             height: 24px;
             border-radius: 6px;
             object-fit: contain;
+            background: rgba(92, 198, 178, 0.1);
+            padding: 2px;
         }
 
         .widget-controls {
@@ -128,25 +129,29 @@
 
         .widget-content {
             flex: 1;
-            padding: 16px 20px;
+            padding: 12px;
             display: flex;
             flex-direction: column;
             gap: 12px;
             -webkit-app-region: no-drag;
+            box-sizing: border-box;
         }
 
         .stats-row {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 12px;
+            gap: 8px;
+            flex-shrink: 0;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .stat-item {
             text-align: center;
-            padding: 12px;
+            padding: 8px;
             background: var(--bg-secondary);
             border: 1px solid var(--border-color);
-            border-radius: 8px;
+            border-radius: 6px;
             transition: all 0.2s ease;
         }
 
@@ -171,16 +176,18 @@
 
         .action-buttons {
             display: flex;
-            gap: 8px;
-            margin-top: auto;
+            gap: 6px;
+            flex-shrink: 0;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .action-btn {
             flex: 1;
-            padding: 8px 12px;
+            padding: 6px 8px;
             border: none;
-            border-radius: 6px;
-            font-size: 12px;
+            border-radius: 4px;
+            font-size: 11px;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.2s ease;
@@ -333,11 +340,9 @@
                 <div class="action-buttons">
                     <button class="action-btn primary" onclick="startAllServices()">
                         <i data-lucide="play"></i>
-                        Start All
                     </button>
                     <button class="action-btn secondary" onclick="stopAllServices()">
                         <i data-lucide="square"></i>
-                        Stop All
                     </button>
                 </div>
             `;
